# spm_repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
